--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "fixed-data-table": "^0.6.3",
+    "lodash": "^4.14.1",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "redux": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
